--- a/layouts/shortcodes/cur.html
+++ b/layouts/shortcodes/cur.html
@@ -1,1 +1,2 @@
-{{ now | time | time.Format "2006-01-02 15:04:05" }}
+{{ $t := now }}
+{{ time $t "Asia/Shanghai" | time.Format "2006-01-02 15:04:05" }}
